WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255261
REGRESSION(
262774@main
): [ iOS ] editing/selection/ios/selection-handles-in-readonly-input.html is a constant timeout
https://bugs.webkit.org/show_bug.cgi?id=255261
Summary
REGRESSION(262774@main): [ iOS ] editing/selection/ios/selection-handles-in-r...
Robert Jenner
Reported
2023-04-10 17:23:43 PDT
editing/selection/ios/selection-handles-in-readonly-input.html is a constant timeout on iOS. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=editing%2Fselection%2Fios%2Fselection-handles-in-readonly-input.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-10 17:55:41 PDT
<
rdar://problem/107860599
>
Robert Jenner
Comment 2
2023-04-10 17:57:28 PDT
I was able to reproduce the timeout at iOS 16 Release ToT running the test as follows: run-webkit-tests --iOS-simulator editing/selection/ios/selection-handles-in-readonly-input.html I have also bisected a regression point. The timeout reproduces at
262774@main
, but not at
262773@main
. So it appears that
https://commits.webkit.org/262774@main
is the regression point.
EWS
Comment 3
2023-04-10 18:04:59 PDT
Committed
262795@main
(22c8b78475f9): <
https://commits.webkit.org/262795@main
> Reviewed commits have been landed. Closing PR #12596 and removing active labels.
Robert Jenner
Comment 4
2023-04-10 18:07:41 PDT
Re-opening after expectation commit marked bug as resolved fixed.
Richard Robinson
Comment 5
2023-04-10 21:22:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12602
EWS
Comment 6
2023-04-11 09:46:11 PDT
Committed
262828@main
(6513acfa9782): <
https://commits.webkit.org/262828@main
> Reviewed commits have been landed. Closing PR #12602 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug