REGRESSION(262774@main): [ iOS ] editing/selection/ios/selection-handles-in-readonly-input.html is a constant timeout https://bugs.webkit.org/show_bug.cgi?id=255261 rdar://107860599

Reviewed by Wenson Hsieh.

262774@main accidentally changed the logic of some selection logic due to the early return in
`WebKit::WebPage::getPlatformEditorStateCommon`.

This PR fixes this by modifying the early return to ensure consistency with how this logic worked
previously.

* LayoutTests/platform/ios/TestExpectations:
* Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::getPlatformEditorStateCommon const):

Canonical link: https://commits.webkit.org/262828@main